# FTL

./: build.sh
src/: CMakeLists.txt  FTL.h  capabilities.c  capabilities.h  config.c  daemon.c  daemon.h  datastructure.c  datastructure.h  dhcp-discover.c  dnsmasq_interface.c  dnsmasq_interface.h  enums.h  gc.c  log.c  log.h  main.c  prelude.h  regex.c  regex_r.h  resolve.c  shmem.c  shmem.h  signals.c  timers.c  timers.h
src/api/: api.c  socket.c  socket.h
src/database/: CMakeLists.txt  aliasclients.c  common.c  common.h  database-thread.c  gravity-db.c  gravity-db.h  message-table.c  network-table.c  query-table.c  sqlite3-ext.c
src/dnsmasq/: CMakeLists.txt  forward.c
src/syscalls/: syscalls.h
src/tre-regex/: CMakeLists.txt
test/: run.sh  test_suite.bats
